Added simple CSS styling

--- a/hobbies.html
+++ b/hobbies.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Hobbies</title>
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="CSS/styles.css" />
   </head>
   <body>
+    <h3><a href="index.html">Home</a></h3>
+
     <h3>My Hobbies</h3>
     <ol>
       <li>
