--- a/index.html
+++ b/index.html
@@ -4,28 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edwin's Personal Site</title>
+
+    <!-- CSS LINK -->
+    <link rel="stylesheet" href="CSS/styles.css" />
   </head>
   <body>
     <table cellspacing="20">
       <td>
-        <img src="images/edwin.jpeg" alt="edwin-profile-picture" height="130px" />
+        <img
+          src="images/edwin.jpeg"
+          alt="edwin-profile-picture"
+          height="130px"
+        />
       </td>
       <td>
         <h1>Edwin Roldan Delgado</h1>
         <p>
-          <em>Software Developer at the
+          <em>
+            Software Developer at the
             <a href="https://www.linkedin.com/company/army-software-factory/">
-              <em><strong>Army Software Factory</strong></em>
+              <strong>Army Software Factory</strong>
             </a>
+          </em>
         </p>
         <p><em>Army Futures Command</em></p>
         <p>
-          I am a Software Developer at the Army Software Factory. <br> My focus is to
-          build applications to support the Army's mission. I also love pizza 🍕!
+          I am a Software Developer at the Army Software Factory. <br />
+          My focus is to build applications to support the Army's mission. I
+          also love pizza 🍕!
         </p>
       </td>
     </table>
-    
+
     <hr />
     <h3>Education</h3>
     <ul>
@@ -39,9 +49,12 @@
       </ul>
     </ul>
     <ul>
-      <li><a href="https://zerotomastery.io/">Zero to Mastery</a> Software Developer Bootcamp</li>
+      <li>
+        <a href="https://zerotomastery.io/">Zero to Mastery</a> Software
+        Developer Bootcamp
+      </li>
     </ul>
-    <hr>
+    <hr />
     <h3>Work Experience</h3>
     <table cellspacing="10px">
       <thead align="left">
@@ -63,9 +76,13 @@
           <td>2018-2023</td>
           <td>Systems Engineer</td>
         </tr>
+        <tr>
+          <td>2023-Present</td>
+          <td>Software Developer</td>
+        </tr>
       </tbody>
     </table>
-    <hr>
+    <hr />
     <h3>Skills</h3>
     <table cellspacing="10">
       <tr>
@@ -81,7 +98,7 @@
         <td>⭐⭐⭐</td>
       </tr>
     </table>
-    <hr>
-    <a href="hobbies.html">My Hobbies</a>    <a href="contact.html">Contact Me</a>
+    <hr />
+    <a href="hobbies.html">My Hobbies</a> <a href="contact.html">Contact Me</a>
   </body>
 </html>
