--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Me</title>
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="CSS/styles.css" />
   </head>
   <body>
+    <h3><a href="index.html">Home</a></h3>
     <h1>Contact Me</h1>
     <p>123 One Street</p>
     <p>(555) 555-123</p>
